--- a/box.html
+++ b/box.html
@@ -7,11 +7,7 @@
     <title>BOX</title>
 </head>
 <body>
-    <!-- box1用のdiv -->
     <div class="box1">
-    	<div class="box2">
-    		
-    	</div>
-    </div>
-</body>
+        <div class="box2"></div>
+    </div></body>
 </html>
