--- a/1_4.html
+++ b/1_4.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="ja">
 <head>
     <meta charset="UTF-8">
     <!-- CSSファイルの読み込み -->
@@ -7,5 +7,16 @@
     <title>1-4</title>
 </head>
 <body>
+	<div class="header"></div>
+	<div class="main-visual"></div>
+	<div class="main clearfix">
+		<div class="left-sidebar"></div>
+		<div class="blog"></div>
+		<div class="right-sidebar"></div>
+	</div>
+	<div class="footer"></div>
+
 </body>
 </html>
+
+
