--- a/1_7.html
+++ b/1_7.html
@@ -7,37 +7,37 @@
 </head>
 <body>
 	<section class="main-visual">
-		<h2 class="main-visual-text">サービス紹介</h2>		
+		<h1 class="main-visual-text">サービス紹介</h1>		
 	</section>
 	<main>
-		<div class="content-item">
-			<img src="1_7img/wc-logo.png">
+		<section class="content-item">
+			<h2><img src="1_7img/wc-logo.png"></h2>
 			<p>マンツーマンサポートによる学習で<br>
 			確実にWebスキルを習得できるプログラミングスクールです。
 			</p>
 			<a href="">Webサイト</a>			
-		</div>
-		<div class="content-item">
-			<img src="1_7img/wcp-logo.png">
+		</section>
+		<section class="content-item">
+			<h2><img src="1_7img/wcp-logo.png"></h2>
 			<p>未経験から転職を保証する<br>
 			日本で唯一のプログラミングスクールです。
 			</p>
 			<a href="">Webサイト</a>			
-		</div>
-		<div class="content-item">
-			<img src="1_7img/wcw-logo.png">
+		</section>
+		<section class="content-item">
+			<h2><img src="1_7img/wcw-logo.png"></h2>
 			<p>家庭も仕事も頑張りたい主婦・ママ向けの<br>
 			１ヶ月でWebサイトを制作するWebデザインスクールです。
 			</p>
 			<a href="">Webサイト</a>			
-		</div>
-		<div class="content-item">
-			<img src="1_7img/wcc-logo.png">
+		</section>
+		<section class="content-item">
+			<h2><img src="1_7img/wcc-logo.png"></h2>
 			<p>3000人のエンジニアをサポートしてきたエージェントが<br>
 			あなたの転職をサポート
 			</p>
 			<a href="">Webサイト</a>			
-		</div>
+		</section>
 	</main>
 
 </body>
